--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
-    "vite": "^4.3.3"
+    "vite": "^4.3.3",
+    "vite-plugin-compression2": "^0.9.2"
   }
 }
